// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App - Mocking matches snapshot when no title 1`] = `
<div
  className="App"
>
  <p
    className="App-intro"
  >
    App Introduction
  </p>
  <h2>
    First List
  </h2>
  <list />
  <h2>
    Second List
  </h2>
  <list />
</div>
`;

exports[`App - Mocking matches snapshot with title 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <h1
      className="App-title"
    >
      Example Title
    </h1>
  </header>
  <p
    className="App-intro"
  >
    App Introduction
  </p>
  <h2>
    First List
  </h2>
  <list />
  <h2>
    Second List
  </h2>
  <list />
</div>
`;
